--- a/CustomTimelineEra/packages.config
+++ b/CustomTimelineEra/packages.config
@@ -6,4 +6,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.3.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Sitecore.Analytics.Model.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Analytics.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Kernel.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
 </packages>
