Populate built-in facets with contact information

--- a/CustomTimelineEra/App_Config/Include/z.CustomTimelineEra/IdentifyContact.config
+++ b/CustomTimelineEra/App_Config/Include/z.CustomTimelineEra/IdentifyContact.config
@@ -9,6 +9,8 @@
       <createVisit>
         <processor type="CustomTimelineEra.Pipelines.CreateVisit.IdentifyContact, CustomTimelineEra"
                    patch:before="processor[1]" />
+        <processor type="CustomTimelineEra.Pipelines.CreateVisit.UpdateContactInformation, CustomTimelineEra"
+                   patch:after="processor[@type='Sitecore.Analytics.Pipelines.CreateVisits.InitializeProfile, Sitecore.Analytics']" />
       </createVisit>
     </pipelines>
   </sitecore>
