Create default MVC layout and page

--- a/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
+++ b/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
@@ -5,6 +5,8 @@
         <configuration name="CustomTimelineEra">
           <predicate>
             <include name="Content" database="master" path="/sitecore/content" />
+            <include name="Layouts" database="master" path="/sitecore/layout/Layouts/Custom Timeline Era" />
+            <include name="Templates" database="master" path="/sitecore/templates/Custom Timeline Era" />
           </predicate>
 
           <dataProviderConfiguration enableTransparentSync="true" />
