--- a/CustomTimelineEra/packages.config
+++ b/CustomTimelineEra/packages.config
@@ -16,6 +16,8 @@
   <package id="Sitecore.Analytics.Model.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Analytics.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Kernel.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Mvc.Analytics.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Mvc.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
   <package id="Unicorn" version="4.0.0" targetFramework="net452" />
   <package id="Unicorn.Core" version="4.0.0" targetFramework="net452" />
 </packages>
