--- a/CustomTimelineEra/packages.config
+++ b/CustomTimelineEra/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="Configy" version="1.0.0" targetFramework="net452" />
+  <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="Kamsar.WebConsole" version="2.0.0" targetFramework="net452" />
   <package id="MicroCHAP" version="1.2.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
