--- a/CustomTimelineEra/packages.config
+++ b/CustomTimelineEra/packages.config
@@ -17,6 +17,7 @@
   <package id="Rainbow.Storage.Yaml" version="2.0.0" targetFramework="net452" />
   <package id="Sitecore.Analytics.Model.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Analytics.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Cintel.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Kernel.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Mvc.Analytics.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="8.2.170614" targetFramework="net452" developmentDependency="true" />
