Add "Outcomes Panel" rendering to trigger outcomes in xDB

--- a/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
+++ b/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
@@ -6,6 +6,7 @@
           <predicate>
             <include name="Content" database="master" path="/sitecore/content" />
             <include name="Layouts" database="master" path="/sitecore/layout/Layouts/Custom Timeline Era" />
+            <include name="Renderings" database="master" path="/sitecore/layout/Renderings/Custom Timeline Era" />
             <include name="Templates" database="master" path="/sitecore/templates/Custom Timeline Era" />
           </predicate>
 
