--- a/CustomTimelineEra/App_Data/Content/content/Home.yml
+++ b/CustomTimelineEra/App_Data/Content/content/Home.yml
@@ -14,6 +14,22 @@ SharedFields:
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
   Value: "-1"
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:p="p" xmlns:s="s"
+      p:p="1">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
+        <r
+          uid="{3AF61D64-F65A-4F6B-A9B7-344BDE533E5A}"
+          s:ds=""
+          s:id="{A9D438BC-1544-4C82-934A-F92A6CAD8463}"
+          s:par=""
+          s:ph="main" />
+      </d>
+    </r>
 Languages:
 - Language: en
   Versions:
