--- a/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
+++ b/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
@@ -7,6 +7,7 @@
             <include name="Content" database="master" path="/sitecore/content" />
             <include name="Layouts" database="master" path="/sitecore/layout/Layouts/Custom Timeline Era" />
             <include name="Renderings" database="master" path="/sitecore/layout/Renderings/Custom Timeline Era" />
+            <include name="Custom Outcome Definition Insert Option Rule" database="master" path="/sitecore/system/Settings/Rules/Insert Options/Rules/Custom Outcome Definition" />
             <include name="Templates" database="master" path="/sitecore/templates/Custom Timeline Era" />
           </predicate>
 
