Add example Custom Outcome Definitions to demonstrate custom eras

--- a/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
+++ b/CustomTimelineEra/App_Config/Include/z.CustomTimeLineEra.Serialization/DefaultConfig.config
@@ -7,6 +7,9 @@
             <include name="Content" database="master" path="/sitecore/content" />
             <include name="Layouts" database="master" path="/sitecore/layout/Layouts/Custom Timeline Era" />
             <include name="Renderings" database="master" path="/sitecore/layout/Renderings/Custom Timeline Era" />
+            <include name="Media Items" database="master" path="/sitecore/media library/Custom Timeline Era" />
+            <include name="Superhero Outcome Group" database="master" path="/sitecore/system/Marketing Control Panel/Taxonomies/Outcome group/Superhero" />
+            <include name="Outcome Definitions" database="master" path="/sitecore/system/Marketing Control Panel/Outcomes/Custom Timeline Era" />
             <include name="Custom Outcome Definition Insert Option Rule" database="master" path="/sitecore/system/Settings/Rules/Insert Options/Rules/Custom Outcome Definition" />
             <include name="Templates" database="master" path="/sitecore/templates/Custom Timeline Era" />
           </predicate>
