Update solution to target .NET Framework 4.6.1

--- a/CustomTimelineEra/CustomTimelineEra.csproj
+++ b/CustomTimelineEra/CustomTimelineEra.csproj
@@ -100,6 +100,7 @@
     <Reference Include="Sitecore.Mvc.Analytics, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Sitecore.Mvc.Analytics.NoReferences.8.2.170614\lib\NET452\Sitecore.Mvc.Analytics.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
