--- a/CustomTimelineEra/packages.config
+++ b/CustomTimelineEra/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.1" targetFramework="net461" />
@@ -26,6 +27,13 @@
   <package id="Sitecore.Marketing.Taxonomy.NoReferences" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Mvc.Analytics.NoReferences" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="Unicorn" version="4.1.1" targetFramework="net461" />
   <package id="Unicorn.Core" version="4.1.1" targetFramework="net461" />
 </packages>
