--- a/src/CustomTimelineEras/Web.config
+++ b/src/CustomTimelineEras/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="sitecore" type="Sitecore.Configuration.ConfigReader, Sitecore.Kernel" />
@@ -11,6 +11,10 @@
     <add key="DictionaryFolder" value="/sitecore/shell/controls/rich text editor/Dictionaries/" />
     <add key="Lucene.Net.FSDirectory.class" value="Sitecore.Search.FSDirectory, Sitecore.Kernel" />
     <add key="PageInspector:ServerCodeMappingSupport" value="Disabled" />
+    <!-- Telerik keys -->
+    <add key="Telerik.AsyncUpload.ConfigurationEncryptionKey" value="YOUR_ENCRYPTION_KEY_TO_GO_HERE" />
+    <add key="Telerik.Upload.ConfigurationHashKey" value="YOUR_ENCRYPTION_KEY_TO_GO_HERE" />
+    <add key="Telerik.Web.UI.DialogParametersEncryptionKey" value="YOUR_ENCRYPTION_KEY_TO_GO_HERE" />
   </appSettings>
   <sitecore configSource="App_Config\Sitecore.config" />
   <!-- SYSTEM.WEBSERVER
@@ -205,7 +209,7 @@
         If you change the maxRequestLength setting, you should also change the Media.MaxSizeInDatabase setting.
         Media.MaxSizeInDatabase should always be less than maxRequestLength.
       -->
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="512000" executionTimeout="3600" enableKernelOutputCache="false" relaxedUrlToFileSystemMapping="true" requestValidationMode="4.0" enableVersionHeader="false" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="512000" executionTimeout="3600" enableKernelOutputCache="false" relaxedUrlToFileSystemMapping="false" requestValidationMode="4.0" enableVersionHeader="false" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
