Update solution to Sitecore 9.3

--- a/src/CustomTimelineEras/App_Data/Templates/Custom Timeline Eras/Custom Outcome Definition/Experience Profile Options.yml
+++ b/src/CustomTimelineEras/App_Data/Templates/Custom Timeline Eras/Custom Outcome Definition/Experience Profile Options.yml
@@ -2,7 +2,7 @@
 ID: "452ffb31-5caa-4629-959e-1603e1c36657"
 Parent: "0a3ba377-3172-4dbd-8a5d-cae65a98f891"
 Template: "e269fbb5-3750-427a-9149-7aa950b49301"
-Path: /sitecore/templates/Custom Timeline Eras/Custom Outcome Definition/Data
+Path: /sitecore/templates/Custom Timeline Eras/Custom Outcome Definition/Experience Profile Options
 DB: master
 Languages:
 - Language: en
