--- a/PublishSettings.targets
+++ b/PublishSettings.targets
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <publishUrl>C:\inetpub\wwwroot\sc827.sitecore\Website</publishUrl>
+    <publishUrl>C:\inetpub\wwwroot\sc93.sc</publishUrl>
   </PropertyGroup>
   <Import Project="./PublishSettings.targets.user" Condition="exists('./PublishSettings.targets.user')" />
 </Project>
