--- a/src/CustomTimelineEras/App_Data/Templates/Custom Timeline Eras/Custom Outcome Definition/Experience Profile Options/Show as Era.yml
+++ b/src/CustomTimelineEras/App_Data/Templates/Custom Timeline Eras/Custom Outcome Definition/Experience Profile Options/Show as Era.yml
@@ -2,7 +2,7 @@
 ID: "c9f25aa6-2254-4792-a91f-289c86f52b22"
 Parent: "452ffb31-5caa-4629-959e-1603e1c36657"
 Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
-Path: /sitecore/templates/Custom Timeline Eras/Custom Outcome Definition/Data/Show as Era
+Path: /sitecore/templates/Custom Timeline Eras/Custom Outcome Definition/Experience Profile Options/Show as Era
 DB: master
 SharedFields:
 - ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
@@ -16,7 +16,7 @@ Languages:
   Fields:
   - ID: "9541e67d-ce8c-4225-803d-33f7f29f09ef"
     Hint: __Short description
-    Value: Show this outcome as an era at the top of the timeline in the Experience Profile
+    Value: Ensures this outcome shows as an era at the top of the timeline in the Experience Profile
   Versions:
   - Version: 1
     Fields:
