--- a/src/CustomTimelineEras/CustomTimelineEras.csproj
+++ b/src/CustomTimelineEras/CustomTimelineEras.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CustomTimelineEras</RootNamespace>
     <AssemblyName>CustomTimelineEras</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -46,7 +46,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -260,26 +259,24 @@
       <Version>4.4.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNet.Mvc">
-      <Version>5.2.3</Version>
+      <Version>5.2.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
       <Version>2.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Net.Compilers">
-      <Version>2.10.0</Version>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset">
+      <Version>3.4.0</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Sitecore.Cintel">
-      <Version>8.2.180406</Version>
-      <PrivateAssets>all</PrivateAssets>
+      <Version>9.3.0</Version>
     </PackageReference>
     <PackageReference Include="Sitecore.Kernel">
-      <Version>8.2.180406</Version>
-      <PrivateAssets>all</PrivateAssets>
+      <Version>9.3.0</Version>
     </PackageReference>
     <PackageReference Include="Sitecore.Mvc.Analytics">
-      <Version>8.2.180406</Version>
-      <PrivateAssets>all</PrivateAssets>
+      <Version>9.3.0</Version>
     </PackageReference>
     <PackageReference Include="Unicorn">
       <Version>4.1.1</Version>
